<resources>
    <string name="app_name">Treball Final</string>
    <string name="menu_search">Search</string>
    <string name="item_flag">flag</string>
    <string name="tv_city_name">City</string>
    <string name="city_hour">Hour</string>
    <string name="city_week">Week</string>
    <string name="error_weather_factory">Something went wrong when requesting the city\'s weather!</string>
    <string name="url_request_error">There was an error retrieving the weather of the city.</string>
    <string name="error_exclamation">Error!</string>
    <string name="temperature_grade">20ºC</string>
    <string name="current_city_name">Current_City_Name</string>
    <string name="longitude">longitude</string>
    <string name="latitude">latitude</string>
    <string name="humidity">Humidity:</string>
    <string name="weather_description">Weather Description</string>
    <string name="time">13:00</string>
    <string name="date_daily">Monday 23rd</string>
</resources>