<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/im_clock"
        android:layout_width="46dp"
        android:layout_height="35dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.047"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/ic_reloj" />

    <ImageView
        android:id="@+id/im_weather_current_hourly"
        android:layout_width="46dp"
        android:layout_height="35dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.369"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <ImageView
        android:id="@+id/im_weather_humidity_hourly"
        android:layout_width="46dp"
        android:layout_height="35dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.693"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tv_time_hourly"
        android:layout_width="72dp"
        android:layout_height="33dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/im_clock"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_temperature_hourly"
        android:layout_width="72dp"
        android:layout_height="33dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/temperature_grade"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.427"
        app:layout_constraintStart_toEndOf="@+id/im_clock"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_humidity_hourly"
        android:layout_width="72dp"
        android:layout_height="33dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/humidity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.855"
        app:layout_constraintStart_toEndOf="@+id/im_clock"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>