<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="10dp"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/city_current_weather"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_margin="10dp"
        android:elevation="2dp"
        app:cardCornerRadius="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="-1dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="180dp">

            <ImageView
                android:id="@+id/im_current_weather"
                android:layout_width="102dp"
                android:layout_height="99dp"
                android:layout_marginStart="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.082"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/tv_current_temperature"
                android:layout_width="86dp"
                android:layout_height="97dp"
                android:layout_marginEnd="140dp"
                android:gravity="center"
                android:text="@string/temperature_grade"
                android:textSize="36sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/im_current_weather"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.081" />

            <TextView
                android:id="@+id/tv_current_city"
                android:layout_width="129dp"
                android:layout_height="23dp"
                android:gravity="center"
                android:text="@string/current_city_name"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.065"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/im_current_weather"
                app:layout_constraintVertical_bias="0.076" />

            <ImageView
                android:id="@+id/im_max_current_temperature"
                android:layout_width="38dp"
                android:layout_height="42dp"
                app:layout_constraintBottom_toTopOf="@+id/im_min_current_temperature"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.184"
                app:layout_constraintStart_toEndOf="@+id/tv_current_temperature"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.551"
                android:src="@drawable/ic_uparrow" />

            <ImageView
                android:id="@+id/im_min_current_temperature"
                android:layout_width="38dp"
                android:layout_height="42dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.184"
                app:layout_constraintStart_toEndOf="@+id/tv_current_temperature"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.449"
                android:src="@drawable/ic_downarrow"/>

            <TextView
                android:id="@+id/tv_max_temperature"
                android:layout_width="60dp"
                android:layout_height="34dp"
                android:gravity="center"
                android:text="@string/temperature_grade"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.333"
                app:layout_constraintStart_toEndOf="@+id/im_max_current_temperature"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.13" />

            <TextView
                android:id="@+id/tv_min_temperature"
                android:layout_width="60dp"
                android:layout_height="34dp"
                android:layout_marginTop="9dp"
                android:gravity="center"
                android:text="@string/temperature_grade"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.333"
                app:layout_constraintStart_toEndOf="@+id/im_max_current_temperature"
                app:layout_constraintTop_toBottomOf="@+id/tv_max_temperature"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/tv_current_longitude"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/longitude"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.277"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.9" />

            <TextView
                android:id="@+id/tv_current_latitude"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/latitude"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.05"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.9" />

            <TextView
                android:id="@+id/tv_humidity"
                android:layout_width="63dp"
                android:layout_height="24dp"
                android:text="@string/humidity"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.501"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.705" />

            <TextView
                android:id="@+id/tv_current_humidity"
                android:layout_width="62dp"
                android:layout_height="24dp"
                android:text="@string/humidity"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.729"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.705" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/city_hourly_list_weather"
        android:layout_width="match_parent"
        android:layout_height="440dp"
        android:layout_margin="10dp"
        android:layout_marginTop="5dp"
        android:elevation="2dp"
        app:cardCornerRadius="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/city_current_weather"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_city_weather_hourly"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="clip_vertical|center_horizontal"
                android:layoutAnimation="@anim/layout_animation" />

        </LinearLayout>


    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>